removed streaming example
